--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2340,6 +2340,22 @@
 ### 2017/03/24 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082876/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1082876/" target="_blank">【司改交鋒】陪審、參審的關鍵抉擇：準備好改變了嗎</a></h2><p>蔡志宏／智慧財產法院法官</p><p>進行中的司法改革國是會議，第四組討論的議題，包括長久以來各界高呼倡議，卻始終未能實現的人民參與審判制度。這項議題的討論結果，可能徹底改變司法審判的向來面貌，也將牽動著許多配套制度的司法資源配置，可謂此次會議的重中之重。</p><p>不過，由於此項議題牽涉層面甚廣，制度設計與價值偏好相互影響，加深了議題討論與議決的難度。這一點，從第四組第一次會議的討論情況以及決議加開公聽會，就可以得到印證。就此我認為可以先從陪審制與參審制所可能衍生的價值傾向，加以分析探討，幫助非法律人的國是委員乃至社會大眾，更容易了解自己對於陪審或參審的抉擇取向。</p><p>三大問題可以幫助自己決定傾向支持陪審或參審制：</p><p>一、如果因為證據有限，不得已必然做出錯誤判決，你是寧願：ａ、冤枉好人；還是ｂ、縱放壞人？</p><p>二、如果因為預算有限，不得不限制素人參與審判的整體規模，你是選擇：ａ、每一個案件中少一點素人參與，但讓更多案件可以有素人參與；ｂ、想辦法找出最有需要素人參與的較少案件，讓這些案件都有多一點素人參與審判？</p><p>三、素人參與審判時，你是希望：a、素人與法官一起決定事實及法律，但法官與素人間的溝通討論不公開進行；b、法官公開指示解釋應適用的法律後，由素人自己決定事實以及法律適用的結果？ </p><p>如果你的答案是b多於a，這表示你更傾向支持陪審制；反之，則是傾向支持參審制。這是因為通常在陪審制中，每個案件參與審判的素人較多，自然無法負荷過多的陪審案件（與問題二有關），也因為素人較多，各種對於案件的觀點併陳，又沒有法官參與其中，因而較難形成判決結論（與問題三有關），在無形中也就提高了有罪判決的舉證要求，導致比較不容易冤枉無辜，但相對地就可能讓真正有罪之人脫免責任（與問題一有關）。</p><p>在我曾經參與模擬陪審審判的有限經驗中，一次陪審團判決無罪，一次陪審團無法得出判決結果，多少也反映出這樣的價值特色。不過，無論怎樣的答案組合，都是價值偏好的結果，並非有絕對的對錯，這也是必須由非法律人共同參與的根本理由。因為，這就是一項重要的政治決定。 </p><p>人民參與審判的制度決策與執行，需要跨部會乃至院際的協調與合作，始能克竟其功。過去觀審制單由司法院推動而以失敗告終，正是歷史教訓的明證。此次司改國是會議突破過往的框架與格局，應是人民參與審判得以本土化落實的最佳契機，也是人民徹底讓司法脫胎換骨的最好轉機。但如果始終在陪審、參審猶豫不決，又如何進一步討論更多的制度細節與配套措施？</p><p>司改國是會議即將在明天就人民陪、參審制度召開公聽會，與會的非法律專業委員，不妨自我檢測自己的價值認同所在，盡早做出這歷史上關鍵的抉擇！</p> #蔡志宏 #法官 #第四組 #人民參與審判 #蘋果日報 #2017-03-24
 
+# 黃致豪
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/24 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14258
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14258" target="_blank">我們對人民參與審判制度的幻想（二之一）</a></h2><p>對現在的政府來說，以蔡英文總統為執政核心的行政團隊在選前提出有關司法改革，尤其是人民參與審判制度的政見，似乎也隨著形勢演變，漸漸變成了一種政策（或者，講得更白一點，是政績）面的「壓力」。自種種跡象觀察，人民參與審判制度對於當政者來講已經是箭在弦上不得不發的一步—，無論是基於上述的「政績壓力」，或是透過履行政見準備連任選舉，甚或是在施政滿意度下降的跡象下，似乎是為適當移轉人民焦點的權宜之策。</p><p>在這樣的環境情勢因素下，隨著司法院長上台以及全國司改會議的進行，種種圍繞著人民參與審判的呼聲、甚至論戰，不斷湧現。無論是號稱源自英美的陪審制或者來自德國的參審制，一時之間擁護者各據一方，大有不共戴天之勢。</p><p>這期間，代表官方「改革」立場的司法院，針對人民參與審判的議題顯然已經透過新任院長許宗力大法官數次表態：陪審制有許多「問題」，參審制才適合台灣。</p><p>然而，事實是這樣嗎？在台灣的我們，無論是法律工作者、學者、或者一般人，又究竟對人民參與審判制度了解多少？這些人又有怎麼樣的實際證據可以支持各自的論證？很可惜的，人民參與審判制度爭論了這些年，到現在似乎在學者與司法實務工作者的論戰之間，我們看到的仍是從立場出發的居多，討論證據與研究的偏少。</p><p>筆者自身同時身兼台灣執業律師、司法行為科學研究者、以及美國國家訴訟學院（National Institute of Trial Advocacy；一個專注於法庭訴訟技巧與相關科學訓練與教學、提升法曹實作能力的機構）的師資以及訴訟專家（Master Advocate）幾個身分，也在從事實務工作的這些年來親身參與陪審團審判，至今仍每年回美國法院與NITA受訓與研習審判實務。因此也希望利用這個機會把研究的一些所得與國人分享。或許我們可以討論政策之時，同時也看看實際的證據有哪些，作為參考。</p><p>人民參與審判的各種制度都不完美</p><p>看著現在陪審制與參審制兩派支持者的論爭，包括許多法律人在內的一般國人，第一印象很可能會覺得這兩派基本上就跟金庸武俠當中華山的氣宗、劍宗之爭一樣，各自認為對方是異端邪說，不共戴天；只有我的主張可以救國。</p><p>但事實上，比較合於現實的描述，應該是這樣的：依據司法院在2013年與2014年所提供的相關資料以及我自己的研究，無論是陪審或參審，其實都是在同一個光譜上的人民參與審判制度，只是所處的波段與端點不同而已。</p><p>換句話說：二者在本質上都屬於將憲法下國民主權引入司法的人民參與審判制度，比較大的差別只是在於國民實際參與／介入司法的程度深淺，官民之間是合作或者分工制衡，以及因此所搭配的配套措施有所不同而已。</p><p>不完美的參審制</p><p>先講參審制。參審制，學術研究上一般也稱為lay judge（平民法官），主要指的是人民與法官距離較為接近的一種「官民合審」審判型態：把人民拉上法枱（bench），跟法官坐在一起審判。這裡指的審判，包括了在法庭上一起聽取兩造提出的證據，共同討論並認定事實、適用法律；如果判斷有罪的話，還一起討論量刑。被告在參審制之下，原則上並沒有選擇要不要適用參審程序的程序選擇權。</p><p>至於在這種「官民合審、無關被告」的參審制精神之下，以平民法官的任期區分，又有一些變形：德國制的人民參審，是有固定任期制（例如德國法院組織法規定的五年）的參審員，多半是從有意願的人當中選任、或者經過推薦而擔任。相對的則是日本的裁判員（sai-ban yin）制，選任出來的參審人民只在個案中與法官一起審判，判決完就走人，沒有任期問題。</p><p>讀者看到這邊應該想到一個問題了：「官民合審」的距離這麼近，那麼一般人在審判中有沒有可能因為對象是法官，因為資訊或地位不對等，而受到有形或無形的影響而傾向配合法官呢？</p><p>社會心理學家Stanley Milgram在1970與80年代就這個問題曾經做過實驗，並且發表了一系列論文與書籍（Milgram, 1963; 1974），後來也經過其他心理學家同儕的檢視研究（Anthony, 1999; Blass, 1999, 2002, 2004; Levine 2004）證實了：在近距離相處下，哪怕只是一次性任務，也不管這任務多違背人性（例如從電擊、體罰乃至於大屠殺），一般人（至少65%以上）原則上都會服從權威—甚至無論這「權威」是否開口明示，一般人的決策，都會受到權威影響而去迎合權威者。</p><p>這個已經普遍被現代行為科學所接受的「權威服從」（obedience to authority）概念，展現在邏輯學上正是一種常見的謬誤：訴諸權威的謬誤（the fallacy of appeal to authority）。</p><p>上述概念，用白話可以簡化成幾個問題：如果你是參審／裁判員，必須與法官「合作」審案，你覺得你有多大本事（或膽子）在事實面、法律面、量刑面挑戰法官？進一步講，如果你必須跟這幾個法官「合作」五年呢？你有多大的自信可以不受影響，勇於在每個個案中挺身而出、堅持自己的見解，對抗你面前的「包青天」？</p><p>以我自己在台灣執業的訴訟經驗，加上我在律師研習所教學的調查，縱使是受過專業訓練的律師，敢於在法庭上勇於對抗法官，提出異議的律師，恐怕也不會高於上述一系列實驗的三成五。那麼一般國民能做到什麼程度？就很值得深思了。</p><p>所以，或許參審制（包括德國、日本與其他）「官民合審」的「合作」精神與制度設計，從行為科學的眼光來檢視，並沒有那麼完美—權威與非權威之間，向來制衡與監督的可能性遠高過合作的可能性；至少科學證據是這樣告訴我們的。</p><p>當然，這是參審制的問題之一，但不是唯一的問題。只是，如果官方真的打算強渡關山，硬推參審制做為政績，那麼國家至少也應該深入研究這個重要的缺陷，告訴我們應該用怎樣的制度改良來隔絕審判中的「權威服從效應」。</p><p>不完美的陪審制</p><p>相對於前述參審制這種「官民合審、無關被告」的「合作」理想，在光譜另一端則是強調人民深入參與審判審議、盡量不受外力干擾的陪審制（jury system）。它的制度設計本質與精神，則是沿襲權力分立理念而來的「制衡」分工（check and balance）理念，由陪審團負責源自社會生活經驗的事實認定（fact-finding），由法官處理程序（procedural referee）以及依據官方的量刑指南進行量刑。</p><p>而且陪審制的設計，還不是單一制衡（陪審員認定事實—法官適用法律）而已，事實上是雙重制衡：陪審員之間透過票票等值以及原則上一致決的設計，確保每個人的意見同等重要，消除權威服從效應，並且達成公民審議辯論的最大溝通可能。</p><p>換句話說，除了陪審團會與法官之間產生分工制衡的關係（組間制衡inter-group check）外，陪審員之間也會因為資訊與地位對等而預期產生組內的制衡（intra-group balance）；從而提升溝通最大化的機率。</p><p>所以陪審制完美無缺陷？當然不是。陪審制的缺陷也不少，其中最大的問題無非：相較於目前的職業法官審判或者德國參審制，將可預見「花錢耗時間」的問題—徵召與挑選陪審員需要強大的後勤系統支援，以及審檢辯的全面變革（包括態度與技術），成本上升幾乎是必然之事；而審議的大量溝通需要以資訊交換與時間耗費作為前提，因此花在溝通上的時間勢必增加。</p><p>當然，如果把徵召陪審員與建構順暢溝通所需的成本看做是一個缺陷的話，那麼在徵召上採取跟陪審制一樣「單次使用」參與審判的日本裁判員制度，顯然也會有類似的問題。</p><p>再來，陪審制常見的問題，正是因為陪審員在審判程序中必須採「被動聽訟」角色所生的欠缺參與，以及因而導致的「審判是否不夠認真」疑慮。這方面，主要是一系列的問題：在陪審制度下，陪審員原則上不能在審判中對被告或證人主動提問，也不能在審理進行中（也就是進入評議討論階段前）先行討論還不完整的案情（稱為「中間評議」），因此有可能從原先「沈默的陪審團」變成「沈睡的陪審團」，甚至在評議過程依據不充足的資訊就做出判斷的疑慮。甚至有人會因為閱讀過法律幻想小說的天馬行空，而開始懷疑起操弄或收買陪審團是否容易達成的可能問題等。</p><p>意識到上述問題，美國從司法與行為科學角度研究陪審制改革的學者與實務工作者，如Hannaford、Hans，以及退休法官／教授Yarnell等，分別在其2000年（Hannaford, Hans & Munsterman, 2000）、2002年（Hans, 2002）與2005（Yarnell, 2005）的研究成果中，肯認下列改革有助於陪審制更好：除了法官口頭說明審判指示（jury instructions）外，也應提供書面版本供陪審員參考；讓陪審員適時提問；也准許陪審員在全員到場的狀況下，在評議室內進行中間討論等。</p><p>澳洲也有研究者提出（Lowe, 2012）可以對於陪審員的評議過程在保證不公開的原則下，予以錄影；只有在當事人雙方對於陪審員的評決有違法疑慮時，可以由審檢辯三方進行不公開檢視，作為必要時上訴的依據，藉此同時保障陪審的秘密評議原則（促進最大溝通），也強化陪審員決策的可究責性。對於老是因為法律小說而擔心陪審團被操弄、收買的人來講，或許這會是一個可以考慮的提案。</p><p>無論如何，上述都是在行為科學層面可以有效提高陪審員參與度和相關認知處理能力的手段，也可以藉此處理因為資訊不充足的草率決策疑慮，保障陪審判決的公平與中立性。陪審制絕非完美；這些缺陷與改革方向，其倡議者或許也需要細細思量。（系列未完，待續）</p><p>※作者為執業律師／行為科學研究者／美國國家訴訟技術學院師資／訴訟專家</p> #黃致豪 #律師 #第四組 #人民參與審判 #上報 #2017-03-24
+
+# 林雨蒼
+## backgrounds
+- 其他
+
+## articles
+### 2017/03/24 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1083815/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170324/1083815/" target="_blank">【司改交鋒】改變論述方式 才能讓非法律人實質參與司改國是會議</a></h2><p>林雨蒼／民間司改會資訊專員</p><p>此次司改國是會議最大的亮點是引入過半的非法律人參與會議。不過會議召開至今，法律人與非法律人的隔閡依舊難以打破。非法律人不只難以參與法律人的論戰，有時候提出的問題還可能因為法律人聽不懂而被略過。</p><p>為何如此？事實上，以筆者非法律人的身分來看，法律人的討論方式有不少問題。</p><p>首先，法律人習慣的開會方式，是盍各言爾志，接著可能就決定，或是投票表決，之後花很多時間修整會議記錄。</p><p>可是，針對議題，可能有不少的爭點，這些爭點往往無法在盍各言爾志的過程中疏理，也很難真的一一確認各自的觀點與理由。這些觀點與理由被包裝與混雜在一整套的論述當中，而難以凸顯其中的差異，更遑論提出來一一討論處理。</p><p>再者，筆者也發現，法律學基本上是先由抽象理論出發，再來實際應用到現實中。因此，在會議中常常出現法律學者之間只就理論層面進行交鋒，卻缺乏「這個制度是否適合台灣」的討論。而台灣法律學界對於法實務研究的缺乏，也導致了這些討論缺乏現實狀況的基礎，而只能訴諸於自己的認知、自己的經驗，彼此經驗與認知不同，自然就更難取得共識。甚至，有些法律人為了試圖影響非法律人的認知，還可能刻意在會議上訴諸權威、提出有問題的說法，或是直接舉出可能性極低的極端的案例，作為反對改革的理由，無異於因噎廢食。</p><p>這導致整個國是會議的成了理論與經驗的械鬥，每個人都訴諸自己的感受，缺乏實證與邏輯的支持。</p><p>筆者是理工科系出身，面對問題，至少我們需要先透過客觀事實與調查以了解問題是長什麼樣子，了解這個問題影響的層面為何，才能具體思考這些理論是否可以確實的解決問題。像這樣缺乏現實狀況、只有理論在互搏，甚至彼此定義並不一致的狀況，看起來根本就令人難以理解。如果加上對於法律概念的認知不足，那麼就更難進入狀況參與討論了。</p><p>要真正讓非法律人參與司法改革國是會議，該做的不只是透過法律小學堂彌平非法律人的資訊落差，還需要重新定義整個司法的問題。至少，我們要先問，台灣現在司法的問題究竟是什麼？我們希望能達到怎樣的司法？把起點與終點定義清楚，才能考慮該如何引入與微調理論，以達成司法改革的目標。</p><p>非法律人如果聽不懂法律人的發言，筆者也期待非法律人應直接在會場中詢問，甚至直接當面質疑法律人的論述邏輯與立論基礎。對於無邏輯、無證據、無研究言論的縱容，將會鑄成錯誤的司法改革政策。</p><p>有許多議題如果還需要研究與調查的支撐，不妨就先開始大規模的法實證研究與調查，先了解狀況，再提出改革方案也不為過。最怕的就是頭痛醫頭，腳痛醫腳，最後讓急病亂投醫的偏方通通出籠。</p><p>台灣的司法改革有自己的步調，但在此之前，需要確實的了解台灣的狀況，並且如黃致豪律師所倡議的，以研究、調查為底，以邏輯思辨為輔，去尋求真正可以解決問題的解方。這，才是理想中的司法改革，也才是非法律人能一起參與、確實有感的司法改革。</p> #林雨蒼 #其他 #議事程序 #蘋果日報 #2017-03-24
+
 # 林煜騰
 ## backgrounds
 - 律師
@@ -2356,6 +2372,14 @@
 ### 2017/03/24 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14097
 - <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14097" target="_blank">投書：隔行如隔山　法官豈能通百業</a></h2><p>資深媒體人周玉蔻三億男事件，日前被台北高等法院民事庭判賠，輿論炒得沸沸揚揚，連司改反撲等陰謀論都出爐，這種種的觀察角度都有理，解讀也都脈絡分明，但就筆者的實務經驗而言，個人認為應該是隔行如隔山，法官不能通百業所導致。</p><p>三億男是誰？被周玉蔻採訪的柯Ｐ願站出來，比新聞學上要求的「不能透露消息來源」，處境更佳，報導論述已經「有所本」，何況更有大法官第509號解釋文以及美國最高法院的保護新聞與言論自由處理五原則相挺。二審判決主軸的沒有經過「相當查證」，理由就顯得相對單薄又失衡。⋯⋯</p><p> </p><p>幾年前，台中有一位林姓女老師，因男友白姓醫師移情別戀，於是在轄區警分局狀告白醫師性侵，還提出墮胎的醫療記錄來佐證。中國時報有一位陳姓年輕記者於是根據警方的報案記錄，報導這起疑似性侵案，見報不久白醫師獲不起訴處分，陳記者卻反被白醫師控告妨害名譽，台中地方法院一審判刑4個月，令人訝異。</p><p>二審時，原告和被告、雙方律師陣容相同，但審判長換了一個滿頭白髮的資深法官，雙方所主張的侵權、新聞言論自由等論點大同小異，陳記者眼看節節敗退，商請筆者出席當證人，筆者將一則新聞的產出過程，和新聞生態、操作模式一一闡述，審判長聽得津津有味，留下一句「原來新聞是這樣產出的，責任是這麼切割的，今天讓我長了知識」，當然最後也無罪定讞。</p><p>此案中，審判長最在意的就是「有所本」，陳記者根據警分局的報案記錄撰寫成新聞見報，顯見並非憑空杜撰，是職業性質所要求。另外白醫師也主張檢方對他不起訴，陳記者顯有惡意，但筆者提出院方一、二審判決大異其趣的，比比皆是，不能說一審有罪、二審無罪，就說一審判錯了，遑論對一審法官究責，各行各業有各自的生態與規矩，隔行如隔山，審判長聽進去了。</p><p>我司法官晉用與養成教育，很多都是家門—校門—衙門，一路挺進這個圈子，而且司法院與法務部三申五令要司法官避免無謂的應酬，他們對生活常識與社會百態的了解本就相當侷限，何況是不斷因應時代而生的百業生態。法官不通百業，你我也無法通百業，生涯有限，知識無限，情有可原，所以是該採用多人參與聽審的參審制或陪審制了。</p><p>※作者為文字工作者</p> #周敏煌 #其他 #第四組 #人民參與審判 #司法與人民脫節 #上報 #2017-03-24
 
+# 吳俊達
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/25 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170325/1083778/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170325/1083778/" target="_blank">【司改交鋒】執業律師：法庭全程直播好嗎</a></h2><p>吳俊達／執業律師</p><p>昨天司法院召開憲法法庭，針對「同性婚姻是否違憲」議題，進行全國直播開庭的程序。先前最高法院在「原住民獵人王光祿案」，也進行了法律審的直播。目前司改國是會議，即有論者主張，若干類型案件，包括「事實審」在內，也應進行直播開庭，以擴大民眾、媒體對於法庭的參與。</p><p>然而，依筆者所見，法律案件的法律審、事實審，其彼此差異很大，必須區分討論「直播可行性」。此一議題當然牽涉到我國「媒體法學」的發展程度。弔詭的是，從日前發生的小模命案，各大新聞媒體及刪文逃難鄉民的表現，可看出我國媒體法水準的嚴重不足。本文先從「事實審訊問證人需求」這點，來思考法庭直播的問題。</p><p>根據筆者辦案經驗，在案件進行中，可能因為以下等原因，導致證人拒不出庭：1.畏懼得罪雙方或一方權勢，2.嫌出庭耗費交通時間成本，3.作證沒好處還弄滿身腥，4.可能被法官恐嚇偽證罪，5.得忍受被律師質疑羞辱，6.請假會被老闆白眼扣薪，7.覺得法院寄通知是詐騙。</p><p>未來若事實審推動直播，上述顧慮的證人，恐怕在直播赤裸檢視下，更擔心自己遭網民肉搜，淪為全民公敵，更降低出庭意願。尤以，正義感不能當飯吃，隱私、名譽、自身性命及家人安全，才更重要。</p><p>如果證人不出席陳述，即使加上了法庭直播，會因為法庭活動精采演出，就可能提升審判品質，進而贏得、提升「人民對司法的信賴」？抑或，沒有證人肯說出真相的直播法庭，只是距離真相、公平正義更遙遠？</p><p>反之，即使證人肯勇敢參與直播，我們其實也很擔心「作證動機」。因為有相當訴訟經驗者均知，證人作證原因多端，或出於偏袒一方，或出於自身實際利害，證詞更愛加油添醋、恣意混淆，甚至事先受到一方或不肖律師勾串誘導，且往往被問到真正關鍵事實又是閃躲逃避、避重就輕，動輒推諉時間太久、不復記憶。至少，證人陳述多半是真假摻半，只求兩方都不得罪。證人要成立「《刑法》偽證罪」，在實務上是非常不容易得。</p><p>換言之，現行法庭實務上，諸多證人根本是來擾亂法庭，阻礙法庭接近「事實真相」。這也是何以多數法官不偏好採用證人，多半傾向質疑「證詞可信度」的原因。因此，在事實審直播下，肯出庭作證的人，大概會是什麼樣的性格，我們已不難想像。面對這些「表演狂、明星慾」，法庭難道不會更困擾：我們離正義越來越遠？</p><p>任何「司法審判制度」的存在，是為了實現公平正義，或只是演戲給人民觀賞，或只是為了減輕法官工作量，或滿足少數人的「成名慾望」？值得我們深思！</p> #吳俊達 #律師 #第四組 #法庭直播 #蘋果日報 #2017-03-25
+
 
 
 
@@ -2364,7 +2388,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年03月24日 18:18:03</p>
+<p>本投書整理更新時間：2017年03月25日 10:56:16</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
@@ -2752,4 +2776,5 @@ ___
   - 2017-03-22
   - 2017-03-23
   - 2017-03-24
+  - 2017-03-25
 
