--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -2380,6 +2380,14 @@
 ### 2017/03/25 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170325/1083778/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170325/1083778/" target="_blank">【司改交鋒】執業律師：法庭全程直播好嗎</a></h2><p>吳俊達／執業律師</p><p>昨天司法院召開憲法法庭，針對「同性婚姻是否違憲」議題，進行全國直播開庭的程序。先前最高法院在「原住民獵人王光祿案」，也進行了法律審的直播。目前司改國是會議，即有論者主張，若干類型案件，包括「事實審」在內，也應進行直播開庭，以擴大民眾、媒體對於法庭的參與。</p><p>然而，依筆者所見，法律案件的法律審、事實審，其彼此差異很大，必須區分討論「直播可行性」。此一議題當然牽涉到我國「媒體法學」的發展程度。弔詭的是，從日前發生的小模命案，各大新聞媒體及刪文逃難鄉民的表現，可看出我國媒體法水準的嚴重不足。本文先從「事實審訊問證人需求」這點，來思考法庭直播的問題。</p><p>根據筆者辦案經驗，在案件進行中，可能因為以下等原因，導致證人拒不出庭：1.畏懼得罪雙方或一方權勢，2.嫌出庭耗費交通時間成本，3.作證沒好處還弄滿身腥，4.可能被法官恐嚇偽證罪，5.得忍受被律師質疑羞辱，6.請假會被老闆白眼扣薪，7.覺得法院寄通知是詐騙。</p><p>未來若事實審推動直播，上述顧慮的證人，恐怕在直播赤裸檢視下，更擔心自己遭網民肉搜，淪為全民公敵，更降低出庭意願。尤以，正義感不能當飯吃，隱私、名譽、自身性命及家人安全，才更重要。</p><p>如果證人不出席陳述，即使加上了法庭直播，會因為法庭活動精采演出，就可能提升審判品質，進而贏得、提升「人民對司法的信賴」？抑或，沒有證人肯說出真相的直播法庭，只是距離真相、公平正義更遙遠？</p><p>反之，即使證人肯勇敢參與直播，我們其實也很擔心「作證動機」。因為有相當訴訟經驗者均知，證人作證原因多端，或出於偏袒一方，或出於自身實際利害，證詞更愛加油添醋、恣意混淆，甚至事先受到一方或不肖律師勾串誘導，且往往被問到真正關鍵事實又是閃躲逃避、避重就輕，動輒推諉時間太久、不復記憶。至少，證人陳述多半是真假摻半，只求兩方都不得罪。證人要成立「《刑法》偽證罪」，在實務上是非常不容易得。</p><p>換言之，現行法庭實務上，諸多證人根本是來擾亂法庭，阻礙法庭接近「事實真相」。這也是何以多數法官不偏好採用證人，多半傾向質疑「證詞可信度」的原因。因此，在事實審直播下，肯出庭作證的人，大概會是什麼樣的性格，我們已不難想像。面對這些「表演狂、明星慾」，法庭難道不會更困擾：我們離正義越來越遠？</p><p>任何「司法審判制度」的存在，是為了實現公平正義，或只是演戲給人民觀賞，或只是為了減輕法官工作量，或滿足少數人的「成名慾望」？值得我們深思！</p> #吳俊達 #律師 #第四組 #法庭直播 #蘋果日報 #2017-03-25
 
+# 黃致豪
+## backgrounds
+- 律師
+
+## articles
+### 2017/03/25 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=14329
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=14329" target="_blank">我們對人民參與審判制度的幻想 （二之二）</a></h2><p>（續前文）</p><p>談一些對於陪審制的誤解—事實查核與快問快答</p><p>在近年來研究人民參與審判制度的過程中，我發現到台灣對於法制政策研究有一個相對獨特的狀況：某些學者以及實務工作者，似乎會在沒有確切證據或者實務經驗的狀況下，對於一個欠缺了解的制度貿下斷言；尤其在法律圈，支持或者否定特定制度的人士，多半習以「某國制度如此」「某學者這樣說過」為由，來支持自己的看法，甚至偶爾會忘記事實查核的重要性。</p><p>以下，我希望以「事實查核」為依據的方式，針對一些常常在公開場合聽到針對陪審制的疑問，直接扼要的答覆，作為大家理解制度的判斷參考。這之中多數的疑問均蒐集自政府（例如司法院）的官方說帖、公聽會的專家學者說法，或者坊間媒體的報導評論質疑，佐以陪審制實務運作或者實證研究的證據，加以答覆。</p><p>陪審制度可能違憲？</p><p>陪審制欠缺人民與法官的溝通；採取一致決或多數決，案件不易審結？</p><p>人民法治教育不足、不夠成熟，容易誤判，不應實施陪審？</p><p>陪審制判決不附理由，不能上訴救濟？</p><p>陪審是英美法系的產物，只適合英美法國家。所以從大陸法系來的台灣不應該採取陪審？</p><p>結語：為何陪審制度較可能是當前司改問題的核心解方？</p><p>引進並採行一項新的制度或政策，理論上必然有其希望達成的對應目的。那麼，當我們在檢視台灣希望引進人民參與審判制度的時候，我們或許也應該思考一下：我們希望透過人民參與審判制度達成什麼目的？是提升審判效率？節省司法成本？提升人民對於司法的信賴？在司法權落實國民主權的理念？或者是進行公民法治教育以期長期的提升公民素養？</p><p>從管理學來看，這是一種「以終為始」的策略思維；決定了目的地再來判斷對應的走法與出發方式，或許也可以讓台灣的司法改革少走一點冤枉路，少一點成本的虛耗。</p><p>由此以觀：或許我們可以同意大部分的政策制度本身並沒有純然的好壞，而比較多是「適合目的與否」的問題。從人民參與審判制度的角度切入，我們在選擇前，顯然必須捫心自問：台灣目前的司法處於怎麼樣的環境，有些什麼問題？又需要透過何種制度，來達成哪些效果？其次則是試圖找出：有沒有哪一項樞紐地位的政策制度一旦實施，將可以透過改革的漣漪效應（rippling effect），促成半數以上的改革以骨牌倒下的方式持續發生。這也就是管理學上80／20法則的應用（或稱帕雷托法則；Pareto principle）：找對了位置，投注20%的改革力量，可能可以達成80%的改革效果。</p><p>從這次總統府司法改革國是會議所列出來的大小議題，以及各項分組會議討論的進程來看，顯然「權責相符」「高效率」「參與透明」「社會安全」「信賴與專業」「保護被害人與弱勢」（參照總統府司改國是會議議題分組）等，都是全民關切的改革焦點。前述這些概念又包含了：展現國民的司法主體性；讓人民進一步理解參與司法的法治教育功能；減輕事實審法院案累負擔；強化證據法則與司法科學作為發現真實的工具；強化並落實檢察官與辯護人的對等與功能；乃至於促進案件集中審理的效率等目標。用白話講：台灣從一個威權戒嚴的社會逐漸轉型迄今，目前的司法環境有許多問題有待大刀闊斧的改革，似乎更多過安於現狀的「維穩」需求。</p><p>依據我們對於陪審制的實際操作與理解：一旦推動陪審制，勢必在人民身為事實法官這樣近距離的觀察下，法官必須角色單純化、回歸中立的程序主持人，而審判程序相對則必須採集中審理、起訴卷證不併送、法律用語平民化，以便陪審員能迅速進入狀況。因而，檢方與辯方也將被迫投注更多心力去提升在審判中的效率與效能。另一方面，人民將必須親身經歷審判的歷程，被迫嚴肅的面對並思考：受害者與被告各自呈現的面貌，以及他們的行為在社會當中的脈絡角色。Hans教授認為「陪審制的同儕審判特色能提高日後的公民意識與公共事務參與」（Hans, 2014），或許也可說是一種終極的公民法治教育，其理由在此。</p><p>從這樣的改革觀點出發，依據我們在本文透過實證與科學角度對於陪審與參審制度提出的種種檢視與分析，目前恐怕也只有讓人民實際參與審判而不受到法官影響的陪審制度，可以一次跳過審檢辯等各方利益團體在改革場上的角力，直接殺入改革的核心，達成各項主要改革目標，而非再次耗費十多年的光陰改革，無功而返，再開下一個司法改革國是會議。</p><p>當然，如果我們根本不希望看到台灣的司法與社會有太大的改變的話，陪審制就未必是我們所要優先考慮的了。</p><p>以終為始；我們究竟希望人民參與審判制度帶給我們的司法與社會怎樣的改變？或許是我們在依據各自立場提出主張之前，都該好好想想的問題，並依此去建構堅實的方法論以及找出科學證據；而不是對特定的政策制度不斷透過一廂情願的幻想，貿然斷言對錯好壞。</p><p>畢竟，人生沒有幾個16年可以拿來不斷地司改。</p><p>※作者為執業律師／行為科學研究者／美國國家訴訟技術學院師資／訴訟專家</p> #黃致豪 #律師 #第四組 #人民參與審判 #上報 #2017-03-25
+
 
 
 
@@ -2388,7 +2396,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年03月25日 10:56:16</p>
+<p>本投書整理更新時間：2017年03月25日 11:05:01</p>
 <ul>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
   <li><a href="http://fb.com/jrf.tw" target="_blank">民間司改會粉專</a></li>
